@startuml strategy-class-diagram
title Strategy Pattern — Class Hierarchy

skinparam backgroundColor #fafafa
skinparam ShadowingEnabled false
skinparam RoundCorner 6
skinparam ArrowColor #546e7a
skinparam defaultFontName Arial
skinparam defaultFontSize 12

skinparam classBackgroundColor #f5f5f5
skinparam classBorderColor #546e7a
skinparam classFontColor #263238
skinparam classHeaderBackgroundColor #f5f5f5

skinparam class<<interface>> {
    BackgroundColor #1565c0
    BorderColor #0d47a1
    FontColor #ffffff
    HeaderBackgroundColor #1565c0
    HeaderFontColor #ffffff
}

skinparam class<<abstract>> {
    BackgroundColor #004A97
    BorderColor #003580
    FontColor #ffffff
    HeaderBackgroundColor #004A97
    HeaderFontColor #ffffff
}

skinparam class<<coda>> {
    BackgroundColor #006064
    BorderColor #004d40
    FontColor #ffffff
    HeaderBackgroundColor #006064
    HeaderFontColor #ffffff
}

skinparam class<<swift>> {
    BackgroundColor #2e7d32
    BorderColor #1b5e20
    FontColor #ffffff
    HeaderBackgroundColor #2e7d32
    HeaderFontColor #ffffff
}

skinparam class<<resolver>> {
    BackgroundColor #6a1b9a
    BorderColor #4a148c
    FontColor #ffffff
    HeaderBackgroundColor #6a1b9a
    HeaderFontColor #ffffff
}

interface FileGenerationStrategy <<interface>> {
  +generate(transactions : List<Transaction>, accounts : List<Account>) : String
  +parse(fileContent : String) : List<Transaction>
  +getFileType() : FileType
  +getLibrary() : Library
  +strategyKey() : String
}

abstract class AbstractCodaStrategy <<abstract>> {
  +getFileType() : FileType.CODA
  +generate(transactions, accounts) : String
  +parse(fileContent) : List<Transaction>
  #formatRecords(records : List<CodaRecord>) : String
  #parseRecords(content : String) : List<CodaRecord>
  #buildHeader(account : Account) : CodaRecord
  #buildMovement(tx : Transaction, account : Account) : CodaRecord
  #buildTrailer(transactions : List<Transaction>) : CodaRecord
  #toTransaction(r : CodaRecord) : Transaction
}

abstract class AbstractSwiftStrategy <<abstract>> {
  +getFileType() : FileType.SWIFT
  +generate(transactions, accounts) : String
  +parse(fileContent) : List<Transaction>
  #formatRecords(records : List<SwiftMtRecord>) : String
  #parseRecords(content : String) : List<SwiftMtRecord>
  #toTransaction(r : SwiftMtRecord) : Transaction
}

class CodaBeanIOStrategy <<coda>> {
  -formatter : BeanIOFormatter
  +getLibrary() : Library.BEANIO
}

class CodaFixedFormat4JStrategy <<coda>> {
  -formatter : FixedFormat4JFormatter
  +getLibrary() : Library.FIXFORMAT4J
}

class CodaFixedLengthStrategy <<coda>> {
  -formatter : FixedLengthFormatter
  +getLibrary() : Library.FIXEDLENGTH
}

class CodaBindyStrategy <<coda>> {
  -formatter : BindyFormatter
  +getLibrary() : Library.BINDY
}

class CodaCamelBeanIOStrategy <<coda>> {
  -formatter : CamelBeanIOFormatter
  +getLibrary() : Library.CAMEL_BEANIO
}

class CodaVelocityStrategy <<coda>> {
  -formatter : VelocityFormatter
  +getLibrary() : Library.VELOCITY
}

class CodaSpringBatchStrategy <<coda>> {
  -formatter : SpringBatchFormatter
  +getLibrary() : Library.SPRING_BATCH
}

class CodaSpringBatchFixedFormat4JStrategy <<coda>> {
  -formatter : SpringBatchFixedFormat4JFormatter
  +getLibrary() : Library.SPRING_BATCH_FIXFORMAT4J
}

class CodaSpringBatchFixedLengthStrategy <<coda>> {
  -formatter : SpringBatchFixedLengthFormatter
  +getLibrary() : Library.SPRING_BATCH_FIXEDLENGTH
}

class SwiftBeanIOStrategy <<swift>> {
  -formatter : BeanIOFormatter
  +getLibrary() : Library.BEANIO
}

class SwiftFixedFormat4JStrategy <<swift>> {
  -formatter : FixedFormat4JFormatter
  +getLibrary() : Library.FIXFORMAT4J
}

class SwiftFixedLengthStrategy <<swift>> {
  -formatter : FixedLengthFormatter
  +getLibrary() : Library.FIXEDLENGTH
}

class SwiftBindyStrategy <<swift>> {
  -formatter : BindyFormatter
  +getLibrary() : Library.BINDY
}

class SwiftCamelBeanIOStrategy <<swift>> {
  -formatter : CamelBeanIOFormatter
  +getLibrary() : Library.CAMEL_BEANIO
}

class SwiftVelocityStrategy <<swift>> {
  -formatter : VelocityFormatter
  +getLibrary() : Library.VELOCITY
}

class SwiftSpringBatchStrategy <<swift>> {
  -formatter : SpringBatchFormatter
  +getLibrary() : Library.SPRING_BATCH
}

class SwiftSpringBatchFixedFormat4JStrategy <<swift>> {
  -formatter : SpringBatchFixedFormat4JFormatter
  +getLibrary() : Library.SPRING_BATCH_FIXFORMAT4J
}

class SwiftSpringBatchFixedLengthStrategy <<swift>> {
  -formatter : SpringBatchFixedLengthFormatter
  +getLibrary() : Library.SPRING_BATCH_FIXEDLENGTH
}

class StrategyResolver <<resolver>> {
  -strategies : Map<String, FileGenerationStrategy>
  +StrategyResolver(strategyList : List<FileGenerationStrategy>)
  +resolve(fileType : FileType, library : Library) : FileGenerationStrategy
}

FileGenerationStrategy <|.. AbstractCodaStrategy
FileGenerationStrategy <|.. AbstractSwiftStrategy
AbstractCodaStrategy <|-- CodaBeanIOStrategy
AbstractCodaStrategy <|-- CodaFixedFormat4JStrategy
AbstractCodaStrategy <|-- CodaFixedLengthStrategy
AbstractCodaStrategy <|-- CodaBindyStrategy
AbstractCodaStrategy <|-- CodaCamelBeanIOStrategy
AbstractCodaStrategy <|-- CodaVelocityStrategy
AbstractCodaStrategy <|-- CodaSpringBatchStrategy
AbstractCodaStrategy <|-- CodaSpringBatchFixedFormat4JStrategy
AbstractCodaStrategy <|-- CodaSpringBatchFixedLengthStrategy
AbstractSwiftStrategy <|-- SwiftBeanIOStrategy
AbstractSwiftStrategy <|-- SwiftFixedFormat4JStrategy
AbstractSwiftStrategy <|-- SwiftFixedLengthStrategy
AbstractSwiftStrategy <|-- SwiftBindyStrategy
AbstractSwiftStrategy <|-- SwiftCamelBeanIOStrategy
AbstractSwiftStrategy <|-- SwiftVelocityStrategy
AbstractSwiftStrategy <|-- SwiftSpringBatchStrategy
AbstractSwiftStrategy <|-- SwiftSpringBatchFixedFormat4JStrategy
AbstractSwiftStrategy <|-- SwiftSpringBatchFixedLengthStrategy
StrategyResolver o--> FileGenerationStrategy : resolves
@enduml
